devops/k8s/prod/kong-gateway/ingress-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gerador-uuid-ingress
  namespace: gerador-uuid-prod
  annotations:
    kubernetes.io/ingress.class: kong
    # Aplica o Rate Limit a TODAS as rotas
    konghq.com/plugins: rate-limit-5-per-second, redirect-swagger # Aplicamos os dois plugins
    # Condição para que o redirect-swagger só seja aplicado na rota /
    konghq.com/path-regex: "^/$"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gerador-uuid-core-service
                port:
                  number: 80
